update to version 4.0.0

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-Cocos2d-Lua-Community v4.0.0 Beta
+Cocos2d-Lua-Community v4.0.0 Release
 
 [Overview]    First release of Cocos2d-Lua-Community, a improved of Cocos2d-x 4.0, 
                      and easy to use Lua game engine. 
